# e_commerce_platform_feasibility_study

./: Cargo.toml  README.md
src/: activity.rs  attribute.rs  coupon.rs  display.txt  main.rs  mocks.csv  order.rs  shipping.rs  sku.rs  user.rs
src/bonus/: limit.rs  mod.rs
src/unique_type/: number.rs
