[package]
name = "e_commerce_platform_feasibility_study"
version = "0.4.0"
authors = ["Riton <ritonelion@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.14"
rust_decimal_macros = "1.14"
chrono = "0.4"
